public class Main {
    public static void main(String[] args) {
        PanelSterowania panel = new PanelSterowania();
        panel.rozpocznij();
    }
}

