public interface SprawdznieSw {
}
